--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
         </section>
         <section role="region" aria-labelledby="Events">
           <h2 id="Events">Upcoming Events</h2>
-          <h3>Vantage Marketing Session</h3>
+          <h3>TBD x Scotiabank x MUFG: Banking & Finance</h3>
           <hr>
-          <img src="Vantage Marketing-2.jpg" alt="Upcoming Event - Nov 17th 3-4:30PM" class="center-image no-stretch-image">
+          <img src="JAN292024.jpg" alt="Upcoming Event - Jan 29th 6 to 8PM" class="center-image no-stretch-image">
           <p>
-            Join us on Friday, November 17th, for an enriching afternoon from 3:00 to 4:30 PM at the Bobby Orr room in the Oshawa Civic Centre. We are excited to host Kevin Taddeo from Vantage Marketing, who will guide you through essential business and marketing skills. This session promises valuable insights that have proven to be instrumental in successful internship applications. Don't miss this opportunity to enhance your understanding of the dynamic marketing field. See you there!</p>
+            Discover the nuances of Banking and Finance from esteemed professionals at the upcoming event on Monday, January 29th, 2024, from 6:00 to 8:00 PM in Building B, Room B107. We are honored to host distinguished professionals including Ilya Feldman, Vice President of Liquidity and Market Risk at MUFG Canada Branch; Sara Thomas, Senior Manager of RESL Policy/Governance and Retail Credit Risk at Scotiabank; and Liudmyla Golubovska, Senior Manager of RESL Policy and Portfolio Management at Scotiabank. Each speaker brings their wealth of experience and expertise, offering students valuable insights into the world of Banking and Finance. Don't miss this unique opportunity to learn directly from these industry leaders.  
           </div>
           <hr>
         </section>
