--- a/index.html
+++ b/index.html
@@ -54,11 +54,13 @@
         </section>
         <section role="region" aria-labelledby="Events">
           <h2 id="Events">Upcoming Events</h2>
-          <h3>TBD x Scotiabank x MUFG: Banking & Finance</h3>
+          <h3>Trent Business Durham Career Panel</h3>
           <hr>
-          <img src="JAN292024.jpg" alt="Upcoming Event - Jan 29th 6 to 8PM" class="center-image no-stretch-image">
+          <img src="careerpanel.jpg" alt="Upcoming Event - March 20th, 7 to 9PM RM B112" class="center-image no-stretch-image">
           <p>
-            Discover the nuances of Banking and Finance from esteemed professionals at the upcoming event on Monday, January 29th, 2024, from 6:00 to 8:00 PM in Building B, Room B107. We are honored to host distinguished professionals including Ilya Feldman, Vice President of Liquidity and Market Risk at MUFG Canada Branch; Sara Thomas, Senior Manager of RESL Policy/Governance and Retail Credit Risk at Scotiabank; and Liudmyla Golubovska, Senior Manager of RESL Policy and Portfolio Management at Scotiabank. Each speaker brings their wealth of experience and expertise, offering students valuable insights into the world of Banking and Finance. Don't miss this unique opportunity to learn directly from these industry leaders.  
+              
+Join us for a career panel on March 20th from 7-9pm in room B112, where industry experts Sue Stinson, Program Executive for Cloud and Data Center Agile Transformation at PwC Canada, and Brian Jackson, Head of Cloud Engineering and DevSecOps at Scotiabank Digital Factory, will share their invaluable insights. Gain firsthand knowledge and advice from these esteemed professionals as they discuss trends, challenges, and opportunities in the rapidly evolving fields of cloud computing and data management. Don't miss this opportunity to learn from the best in the business!
+          
           </div>
           <hr>
         </section>
